# pyramid-todo-app

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  development.ini  production.ini  pyproject.toml  pytest.ini
src/: __init__.py  routes.py  schema.py  tests.py
src/alembic/: env.py
src/alembic/versions/: 20200509_ea1ffc0d0d49.py
src/models/: __init__.py  todomodel.py
src/scripts/: initialize_db.py
src/static/: api.js
src/templates/: layout.jinja2
src/templates/todo/: base.jinja2  index.jinja2
src/views/: __init__.py  default.py  todo.py
src/views/apis/: todoAPI.py
