[tool.poetry]
name = "src"
version = "0.1.0"
description = "pyramid-todo"
authors = ["k4ssyi <kasikasi00@gmail.com>"]
readme = "README.md"
include = ["*.txt","*.ini","*.cfg","*.rst", "src","*.ico","*.png","*.css","*.gif","*.jpg","*.pt","*.txt","*.mak","*.mako","*.js","*.html","*.xml","*.jinja2"]

[tool.poetry.dependencies]
python = "^3.8"
plaster_pastedeploy = "^0.7"
pyramid = "^1.10.4"
pyramid_jinja2 = "^2.8"
pyramid_debugtoolbar = "^4.6.1"
waitress = "^1.4.3"
alembic = "^1.4.2"
pyramid_retry = "^2.1.1"
pyramid_tm = "^2.4"
SQLAlchemy = "^1.3.16"
transaction = "^3.0.0"
"zope.sqlalchemy" = "^1.3"
pyramid_bpython = "^0.1"
pyramid-marshmallow = "^0.6.1"
marshmallow-sqlalchemy = "^0.23.0"

[tool.poetry.dev-dependencies]
WebTest = "^2.0.35"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
ipdb = "^0.13.2"
isort = "^4.3.21"
black = "^19.10b0"
pylint = "^2.5.2"
mypy = "^0.770"
pudb = "^2019.2"

[tool.poetry.plugins."paste.app_factory"]
main = "src:main"

[tool.poetry.plugins."console_scripts"]
initialize_src_db="src.scripts.initialize_db:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
